MF-263: Fixed user name not showing settings drop-down

--- a/src/root.styles.css
+++ b/src/root.styles.css
@@ -1,7 +1,12 @@
+.primaryNavContainer {
+  position: fixed;
+  top: 0;
+}
+
 .topNav {
   display: flex;
   align-items: center;
-  position: fixed;
+  position: relative;
   top: 0;
   left: 0;
   height: var(--omrs-topnav-height);
